style align left on p fix: style.css

--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@ body {
 }
 
 p {
-  text-align:left
+  text-align:left;
 }
